[gd_scene load_steps=62 format=2]

[ext_resource path="res://creatures/bat/rat and bat spritesheet calciumtrice.png" type="Texture" id=1]
[ext_resource path="res://creatures/FlyingCreature.gd" type="Script" id=2]
[ext_resource path="res://system/debug/move_vector.tscn" type="PackedScene" id=3]
[ext_resource path="res://creatures/bat/BatPlayerController.gd" type="Script" id=4]
[ext_resource path="res://creatures/bat/Charge.gd" type="Script" id=5]
[ext_resource path="res://creatures/bat/Arc.gd" type="Script" id=6]
[ext_resource path="res://creatures/HealthBar.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 5.33508

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 160, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 192, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 224, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 256, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 288, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 96, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 192, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 224, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 256, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 288, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 64, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 224, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 64, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 96, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 128, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 160, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 192, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 224, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 288, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 32, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 64, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 32, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 64, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 96, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 128, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 160, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 192, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 224, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 256, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 288, 224, 32, 32 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "land",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "prepare_charge",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "fly",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=50]
radius = 4.18922

[sub_resource type="DynamicFontData" id=51]
font_path = "res://system/debug/nokiafc22.ttf"

[sub_resource type="DynamicFont" id=52]
size = 8
font_data = SubResource( 51 )

[sub_resource type="Theme" id=53]
default_font = SubResource( 52 )

[sub_resource type="CapsuleShape2D" id=54]
radius = 1.45299
height = 7.30257

[node name="Bat" type="KinematicBody2D" groups=[
"creature",
"player",
]]
collision_layer = 18
collision_mask = 9
script = ExtResource( 2 )

[node name="PhysicsCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.551216, 2.28361 )
shape = SubResource( 1 )

[node name="Dropping" type="Node2D" parent="."]
position = Vector2( 0.794594, 20.792 )

[node name="Holding" type="Node2D" parent="."]
position = Vector2( 0.397301, 9.27031 )

[node name="Sprite" type="Sprite" parent="Holding"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 49 )
animation = "idle"
frame = 8
playing = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.132431, 16.9514 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -0.264862, -11.5217 )
shape = SubResource( 50 )

[node name="AttackCollision" type="Area2D" parent="."]
position = Vector2( 0.132431, 16.9514 )
collision_layer = 0
collision_mask = 32

[node name="AttackCollisionShape" type="CollisionShape2D" parent="AttackCollision"]
visible = false
position = Vector2( 0.758823, -9.47433 )
shape = SubResource( 50 )

[node name="move_vector" parent="." instance=ExtResource( 3 )]
track_vector = "move"
color = Color( 1, 0, 0, 1 )

[node name="BatPlayerController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="LeftCharge" type="Node" parent="."]
script = ExtResource( 5 )

[node name="RightCharge" type="Node" parent="."]
script = ExtResource( 5 )
charge_direction = 1

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = -17.0
margin_right = 51.0
margin_bottom = -3.0
theme = SubResource( 53 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraTarget" type="Node2D" parent="."]

[node name="Arc" type="Node2D" parent="."]
rotation = 1.5708
script = ExtResource( 6 )

[node name="Perch" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perch"]
visible = false
position = Vector2( -0.0992126, -4.06772 )
shape = SubResource( 54 )
__meta__ = {
"_editor_description_": "check for rafters"
}

[node name="HealthBar" type="Node2D" parent="."]
script = ExtResource( 7 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="AttackCollision" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="AttackCollision" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="AttackCollision" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="AttackCollision" to="." method="_on_Area2D_body_exited"]
